# deepseek-bot

./: .env-example  .gitignore  Dockerfile  README.md  alembic.ini  class_diagram.puml  class_diagramm.uml  docker-compose.yaml  pyproject.toml
bot/: config.py  main.py
bot/db/: database.py
bot/handlers/: query.py  start.py
bot/keyboards/: inline.py  main.py
bot/middlewares/: rate_limit.py
bot/services/: deepseek.py  presets.py
bot/utils/: rate_limit.py
migrations/: env.py
migrations/versions/: 587a5f6acaa5_create_history_table.py
